--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
       <!-- number count section start -->
       <section>
         <div id="board__container">
-          <div id="box__one" class="board"></div>
-          <div id="box__two" class="board"></div>
-          <div id="box__three" class="board"></div>
-          <div id="box__four" class="board"></div>
-          <div id="box__five" class="board"></div>
-          <div id="box__six" class="board"></div>
-          <div id="box__seven" class="board"></div>
-          <div id="box__eight" class="board"></div>
-          <div id="box__nine" class="board"></div>
+          <div id="box__one"></div>
+          <div id="box__two"></div>
+          <div id="box__three"></div>
+          <div id="box__four"></div>
+          <div id="box__five"></div>
+          <div id="box__six"></div>
+          <div id="box__seven"></div>
+          <div id="box__eight"></div>
+          <div id="box__nine"></div>
         </div>
       </section>
       <!-- number count section end -->
@@ -81,6 +81,7 @@
       <audio id="audio__nine" src="./assets/audio/tom.wav"></audio>
       <!-- audio files start -->
     </main>
+    <!-- footer -->
     <footer>
       <p>
         Copyright &copy; All Right Reserved By
